add burger picture and add recipe description

--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -8,6 +8,22 @@
 
 <body>
     <h1>Steakhouse Burgers</h1>
+    <img src="../images/burger.jpg" 
+    width="300"
+    alt="burger on grill"/>
+    <h2>Description</h2>
+    <p>who doesnt love a big, tender, juicy steakhouse burger?
+     Problem is, theyre difficult to replicate at home because
+    most steakhouses blend different cuts of beef like sirloin, 
+    chuck, and short ribs
+    to customize the flavor and fat content of their burgers.
+    Its certainly possible to grind your own meat or ask your 
+    butcher for a special blend, but its not always practical.
+    Fortunately, theres an easier way. By combining ordinary
+    supermarket ground beef with a panade or mixture of bread
+    and milk and lots of seasoning, you can make steakhouse-style burgers in no time.
+    </p>
 </body>
+
 
 </html>
