Add lasagna recipe link

--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>recipes</title>
+    <title>Recipes</title>
 </head>
 
 <body>
+    
     <h1>Odin Recipes</h1>
-    <a href="recipes/burger.html">Steakhouse Burgers</a>
+    
+    <ul>
+        <a href="recipes/burger.html">Steakhouse Burgers</a>
+
+        <a href="recipes/lasagna.html">World's best lasagna</a>
+    </ul>
+
+
 </body>
 
 
