--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 
 <body>
     
-    <h1>Odin Recipes</h1>
+    <h1>Recipes</h1>
     
     <ul>
-        <a href="recipes/burger.html">Steakhouse Burgers</a>
+        <li><a href="recipes/burger.html">Steakhouse Burgers</a></li>
 
-        <a href="recipes/lasagna.html">World's best lasagna</a>
+        <li><a href="recipes/lasagna.html">World's best lasagna</a></li>
     </ul>
 
 
