--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,6 +5,11 @@
     <title>Recipes</title>
 </head>
 <body>
+    <h1>World's best lasagna</h1>
+    <img src="../images/lasagna.jpg" 
+    alt="Lasagna on plate"
+    width="500"
+    height="300"/>
     
 </body>
 </html>
