Add main page link

--- a/recipes/boterkoek.html
+++ b/recipes/boterkoek.html
@@ -6,7 +6,7 @@
     
     <meta charset="UTF-8">
    
-    <title>Recipes</title>
+    <title>Dutch Recipes</title>
 
 </head>
 
@@ -38,21 +38,16 @@
     <h2>Steps</h2>
 
     <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li> 
+        <li>Mix the butter and both types of sugar in a bowl until fluffy</li>
+        <li>Add the egg and a pinch of salt</li>
+        <li>add the flour and mix it well into the dough</li>
+        <li>Grease the baking tin and divide the dough over the bottom</li>
+        <li>Brush the dough with a beaten egg and make a pattern in the cake with a fork</li>
+        <li>Bake the butter cake in 25-30 minutes until golden brown at 180 °C (top and bottom heat)</li>
+        <li>Let the cake cool and cut into wedges</li>
     </ol>
+
+    <a href="../index.html">Main Page</a>
 
 </body>
 
