--- a/recipes/pannenkoek.html
+++ b/recipes/pannenkoek.html
@@ -10,11 +10,37 @@
     <h1>Dutch Pannenkoek</h1>
 
     <img src="../images/pannenkoek.jpg" 
-    alt="Dutch Pannenkoek on a plate"/>
+    alt="Dutch Pannenkoek on a plate"
+    width="450"
+    height="325"/>
 
+    <h2>Description</h2>
 
+    <p>Pannenkoek, Pancake in English is a famous Dutch dish, it's easy and quick to make and delicious every time</p>
 
+    <h2>Ingredients</h2>
 
+    <ul>
+        <li>2 eggs</li>
+        <li>250 grams of flour</li>
+        <li>500 mililiters of milk</li>
+        <li>a pinch of salt</li>
+    </ul>
+
+    <h2>Steps</h2>
+
+    <ol>
+        <li>Mix the eggs, flour, milk and a pinch of salt in a bowl until tehre are no lumps left</li>
+        <li>Heat some butter or margarine in a pan</li>
+        <li>Wait a while until the pan is warm, and then spread some batter in the center of the pan with a ladle</li>
+        <li>Move your pan back and forth slightly so that the batter is evenly distributed over the entire pan</li>
+        <li>Bake the pancake for about 2-3 minutes until the top is dry</li>
+        <li>Flip the pancake and cook the pancake on the other side for about 1-2 minutes.</li>
+        <li>Place the pancake on a plate and cover the plate with a large lid</li>
+        <li>Bake the rest of the pancakes in this ways</li>
+    </ol>
+
+    <a href="../index.html">Main Page</a>
 
 </body>
 
