--- a/recipes/boterkoek.html
+++ b/recipes/boterkoek.html
@@ -15,13 +15,13 @@
     <h1>Dutch Boterkoek</h1>
     
     <img src="../images/boterkoek.jpg" 
-    alt="boterkoek on a plate"
+    alt="Boterkoek on a plate"
     width="425"
     height="300"/>
 
     <h2>Description</h2>
     
-    <p>Boterkoek, buttercake in english is a famous Dutch cake, made of the main ingredients butter, flour and sugar</p>
+    <p>Boterkoek, buttercake in English is a famous Dutch cake, made of the main ingredients butter, flour and sugar</p>
 
     <h2>Ingredients</h2>
 
@@ -40,7 +40,7 @@
     <ol>
         <li>Mix the butter and both types of sugar in a bowl until fluffy</li>
         <li>Add the egg and a pinch of salt</li>
-        <li>add the flour and mix it well into the dough</li>
+        <li>Add the flour and mix it well into the dough</li>
         <li>Grease the baking tin and divide the dough over the bottom</li>
         <li>Brush the dough with a beaten egg and make a pattern in the cake with a fork</li>
         <li>Bake the butter cake in 25-30 minutes until golden brown at 180 °C (top and bottom heat)</li>
