add some css code

--- a/recipes/hutspot.html
+++ b/recipes/hutspot.html
@@ -8,6 +8,8 @@
     
     <title>Dutch Recipes</title>
 
+    <link rel="stylesheet" href="../styles.css">
+
 </head>
 
 <body>
@@ -49,7 +51,7 @@
         <li>Serve all this with your smoked sausage</li>
     </ol>
 
-    <a href="../index.html">Main Page</a>
+    <a class=link href="../index.html">Main Page</a>
 
 </body>
 
