--- a/recipes/pannenkoek.html
+++ b/recipes/pannenkoek.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     
     <title>Dutch Recipes</title>
+
+    <link rel="stylesheet" href="../styles.css">
+
 </head>
 
 <body>
@@ -40,7 +43,7 @@
         <li>Bake the rest of the pancakes in this ways</li>
     </ol>
 
-    <a href="../index.html">Main Page</a>
+    <a class=link href="../index.html">Main Page</a>
 
 </body>
 
