--- a/recipes/boterkoek.html
+++ b/recipes/boterkoek.html
@@ -8,6 +8,8 @@
    
     <title>Dutch Recipes</title>
 
+    <link rel="stylesheet" href="../styles.css">
+
 </head>
 
 <body>
@@ -47,7 +49,7 @@
         <li>Let the cake cool and cut into wedges</li>
     </ol>
 
-    <a href="../index.html">Main Page</a>
+    <a class=link href="../index.html">Main Page</a>
 
 </body>
 
