Add alot of css

--- a/recipes/hutspot.html
+++ b/recipes/hutspot.html
@@ -17,6 +17,7 @@
     
     <img src="../images/hutspot.jpg" 
     width="400"
+    height="auto"
     alt="Dutch hutspot on plate"/>
     
     <h2>Description</h2>
@@ -51,7 +52,7 @@
         <li>Serve all this with your smoked sausage</li>
     </ol>
 
-    <a class=link href="../index.html">Main Page</a>
+    <em><a class=link href="../index.html">Main Page</a></em>
 
 </body>
 
