--- a/recipes/pannenkoek.html
+++ b/recipes/pannenkoek.html
@@ -15,7 +15,7 @@
     <img src="../images/pannenkoek.jpg" 
     alt="Dutch Pannenkoek on a plate"
     width="450"
-    height="325"/>
+    height="auto"/>
 
     <h2>Description</h2>
 
@@ -43,7 +43,7 @@
         <li>Bake the rest of the pancakes in this ways</li>
     </ol>
 
-    <a class=link href="../index.html">Main Page</a>
+    <em><a class=link href="../index.html">Main Page</a></em>
 
 </body>
 
