--- a/recipes/boterkoek.html
+++ b/recipes/boterkoek.html
@@ -19,7 +19,7 @@
     <img src="../images/boterkoek.jpg" 
     alt="Boterkoek on a plate"
     width="425"
-    height="300"/>
+    height="auto"/>
 
     <h2>Description</h2>
     
@@ -49,7 +49,7 @@
         <li>Let the cake cool and cut into wedges</li>
     </ol>
 
-    <a class=link href="../index.html">Main Page</a>
+    <em><a class=link href="../index.html">Main Page</a></em>
 
 </body>
 
