Add font family

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <h1>Dutch Recipes</h1>
     
     <ul>
-        <li><em><a class=link href="recipes/hutspot.html">Dutch Hutspot</a></em></li>
+        <li><em><a class="link normal" href="recipes/hutspot.html">Dutch Hutspot</a></em></li>
 
-        <li><em><a class=link href="recipes/boterkoek.html">Dutch Boterkoek</a></em></li>
+        <li><em><a class="link normal" href="recipes/boterkoek.html">Dutch Boterkoek</a></em></li>
     
-        <li><em><a class=link href="recipes/pannenkoek.html">Dutch Pannenkoek</a></em></li>
+        <li><em><a class="link normal" href="recipes/pannenkoek.html">Dutch Pannenkoek</a></em></li>
     </ul>
 
     <img src="images/nederland.jpg" 
